--- a/SourceCode/2023/Sep2023/Basics/Saradha/Task3/Main.xaml
+++ b/SourceCode/2023/Sep2023/Basics/Saradha/Task3/Main.xaml
@@ -1,4 +1,4 @@
-<Activity mc:Ignorable="sap sap2010" x:Class="Main" VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="1130.4,610.4" sap2010:WorkflowViewState.IdRef="ActivityBuilder_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:s="clr-namespace:System;assembly=System.Private.CoreLib" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=System.Private.CoreLib" xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=System.Private.CoreLib" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<Activity mc:Ignorable="sap sap2010" x:Class="Main" VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="1130.4,2136" sap2010:WorkflowViewState.IdRef="ActivityBuilder_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:s="clr-namespace:System;assembly=System.Private.CoreLib" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=System.Private.CoreLib" xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=System.Private.CoreLib" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <TextExpression.NamespacesForImplementation>
     <sco:Collection x:TypeArguments="x:String">
       <x:String>System.Activities</x:String>
@@ -80,7 +80,7 @@
       <AssemblyReference>UiPath.Excel</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence sap2010:Annotation.AnnotationText="Generating date and storing into text document" DisplayName="Main Sequence" sap:VirtualizedContainerService.HintSize="496,511.2" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence sap2010:Annotation.AnnotationText="Generating date and storing into text document" DisplayName="Main Sequence" sap:VirtualizedContainerService.HintSize="496,2071.2" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="s:DateTime" Name="Date_Time" />
     </Sequence.Variables>
@@ -100,5 +100,15 @@
     </Assign>
     <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="433.6,90.4" sap2010:WorkflowViewState.IdRef="WriteLine_1" Text="[Date_Time.ToString]" />
     <ui:WriteCell Cell="A1" DisplayName="Write Cell Workbook" sap:VirtualizedContainerService.HintSize="433.6,116" sap2010:WorkflowViewState.IdRef="WriteCell_1" SheetName="sheet1" Text="[Date_Time.ToString]" WorkbookPath="DateTime.xlsx" />
+    <ui:WriteCell Cell="A2" DisplayName="Write Cell Workbook" sap:VirtualizedContainerService.HintSize="433.6,116" sap2010:WorkflowViewState.IdRef="WriteCell_2" SheetName="sheet1" Text="[Date_Time.ToLongDateString]" WorkbookPath="DateTime.xlsx" />
+    <ui:WriteCell Cell="A3" DisplayName="Write Cell Workbook" sap:VirtualizedContainerService.HintSize="433.6,116" sap2010:WorkflowViewState.IdRef="WriteCell_3" SheetName="sheet1" Text="[Date_Time.ToLongTimeString]" WorkbookPath="DateTime.xlsx" />
+    <ui:WriteCell Cell="A4" DisplayName="Write Cell Workbook" sap:VirtualizedContainerService.HintSize="433.6,116" sap2010:WorkflowViewState.IdRef="WriteCell_4" SheetName="sheet1" Text="[Date_Time.ToShortDateString]" WorkbookPath="DateTime.xlsx" />
+    <ui:WriteCell Cell="A5" DisplayName="Write Cell Workbook" sap:VirtualizedContainerService.HintSize="433.6,116" sap2010:WorkflowViewState.IdRef="WriteCell_5" SheetName="sheet1" Text="[Date_Time.ToShortTimeString]" WorkbookPath="DateTime.xlsx" />
+    <ui:WriteCell Cell="A6" DisplayName="Write Cell Workbook" sap:VirtualizedContainerService.HintSize="433.6,116" sap2010:WorkflowViewState.IdRef="WriteCell_6" SheetName="sheet1" Text="[Date_Time.ToString]" WorkbookPath="DateTime.xlsx" />
+    <ui:WriteCell Cell="A7" DisplayName="Write Cell Workbook" sap:VirtualizedContainerService.HintSize="433.6,116" sap2010:WorkflowViewState.IdRef="WriteCell_7" SheetName="sheet1" Text="[Date_Time.ToString(&quot;ddd&quot;)]" WorkbookPath="DateTime.xlsx" />
+    <ui:WriteCell Cell="A8" DisplayName="Write Cell Workbook" sap:VirtualizedContainerService.HintSize="433.6,116" sap2010:WorkflowViewState.IdRef="WriteCell_8" SheetName="sheet1" Text="[Date_Time.ToString(&quot;dddd&quot;)]" WorkbookPath="DateTime.xlsx" />
+    <ui:WriteCell Cell="A9" DisplayName="Write Cell Workbook" sap:VirtualizedContainerService.HintSize="433.6,116" sap2010:WorkflowViewState.IdRef="WriteCell_9" SheetName="sheet1" Text="[Date_Time.ToString(&quot;tt&quot;)]" WorkbookPath="DateTime.xlsx" />
+    <ui:WriteCell Cell="A10" DisplayName="Write Cell Workbook" sap:VirtualizedContainerService.HintSize="433.6,116" sap2010:WorkflowViewState.IdRef="WriteCell_10" SheetName="sheet1" Text="[Date_Time.ToString(&quot;yyyy&quot;)]" WorkbookPath="DateTime.xlsx" />
+    <ui:WriteCell Cell="A11" DisplayName="Write Cell Workbook" sap:VirtualizedContainerService.HintSize="433.6,116" sap2010:WorkflowViewState.IdRef="WriteCell_11" SheetName="sheet1" Text="[Date_Time.ToString(&quot;yy&quot;)]" WorkbookPath="DateTime.xlsx" />
   </Sequence>
 </Activity>
